--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
     "webpack": "3.8.1",
-    "webpack-dev-server": "2.9.4",
     "webpack-manifest-plugin": "1.3.2",
     "whatwg-fetch": "2.0.3"
   },
@@ -47,7 +46,8 @@
     "babel-preset-react": "^6.24.1",
     "eslint": "^4.10.0",
     "eslint-plugin-react": "^7.12.4",
-    "jest": "^24.5.0"
+    "jest": "^24.5.0",
+    "webpack-dev-server": "2.9.4"
   },
   "scripts": {
     "start": "node scripts/start.js",
