--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "promise": "8.0.1",
     "prop-types": "^15.7.2",
     "raf": "3.4.0",
-    "react": "^16.4.1",
+    "react": "^16.4.2",
     "react-dev-utils": "^5.0.2",
     "react-dom": "^16.4.1",
     "resolve": "1.6.0",
@@ -38,7 +38,6 @@
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
     "webpack": "3.8.1",
-    "webpack-dev-server": "2.9.4",
     "webpack-manifest-plugin": "1.3.2",
     "whatwg-fetch": "2.0.3"
   },
@@ -47,7 +46,8 @@
     "babel-preset-react": "^6.24.1",
     "eslint": "^4.10.0",
     "eslint-plugin-react": "^7.12.4",
-    "jest": "^24.5.0"
+    "jest": "^24.5.0",
+    "webpack-dev-server": "2.9.4"
   },
   "scripts": {
     "start": "node scripts/start.js",
