--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "node layout/generateMarkup.js && react-scripts start",
     "build": "node layout/generateMarkup.js && react-scripts build && react-snapshot",
+    "clean": "eslint --fix --ext js src",
     "deploy": "aws s3 cp build s3://spencerrc-website/ --recursive",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
