--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node layout/generateMarkup.js && react-scripts start",
     "build": "node layout/generateMarkup.js && react-scripts build && react-snapshot",
-    "clean": "eslint --fix --ext js src",
+    "clean": "eslint --fix --ext .js,.jsx,.ts,.tsx src",
     "deploy": "aws s3 cp build s3://spencerrc-website/ --recursive",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -24,6 +24,8 @@
     "typescript": "^3.7.5"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.19.2",
+    "@typescript-eslint/parser": "^2.19.2",
     "react-snapshot": "^1.3.0"
   },
   "eslintConfig": {
