--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "website",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "private": true,
   "homepage": "https://spencer.carvers.info",
   "scripts": {
@@ -8,11 +8,9 @@
     "build": "node layout/generateMarkup.js && react-scripts build && react-snapshot",
     "clean": "eslint --fix --ext .js,.jsx,.ts,.tsx src",
     "deploy": "aws s3 cp build s3://spencerrc-website/ --metadata-directive REPLACE --recursive --cache-control max-age=86400",
-    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "dependencies": {
-    "@types/jest": "^25.1.2",
     "@types/node": "^13.7.1",
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
@@ -35,7 +33,7 @@
   "browserslist": [
     ">0.2%",
     "not dead",
-    "not ie <= 11",
+    "not ie < 11",
     "not op_mini all"
   ],
   "reactSnapshot": {
