--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "deploy": "npm run deploy:static && npm run deploy:assets",
     "deploy:assets": "aws s3 cp build s3://spencerrc-website/ --metadata-directive REPLACE --recursive --cache-control max-age=21600 --exclude '*.jpg' --exclude '*.png' --exclude '*.webp'",
     "deploy:static": "aws s3 cp build s3://spencerrc-website/ --metadata-directive REPLACE --recursive --cache-control max-age=31536000 --exclude '*' --include '*.jpg' --include '*.png' --include '*.webp'",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "analyze": "node scripts/analyze.js"
   },
   "dependencies": {
     "@types/node": "^13.7.1",
@@ -29,7 +30,8 @@
     "@typescript-eslint/eslint-plugin": "^2.19.2",
     "@typescript-eslint/parser": "^2.19.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "react-snapshot": "^1.3.0"
+    "react-snapshot": "^1.3.0",
+    "webpack-bundle-analyzer": "^3.6.0"
   },
   "eslintConfig": {
     "extends": "react-app"
