--- a/package.json
+++ b/package.json
@@ -18,17 +18,17 @@
     "@types/node": "^13.9.1",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
-    "node-sass": "^4.13.1",
+    "node-sass": "npm:sass@^1.39.0",
     "react": "^17.0.1",
     "react-app-polyfill": "^0.2.2",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "^3.4.4",
+    "react-scripts": "^4.0.3",
     "typescript": "^3.8.3"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^2.34.0",
-    "@typescript-eslint/parser": "^2.34.0",
+    "@typescript-eslint/eslint-plugin": "^4.30.0",
+    "@typescript-eslint/parser": "^4.30.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "react-snapshot": "^1.3.0",
     "webpack-bundle-analyzer": "^3.6.1"
