--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://spencer.carvers.info",
   "scripts": {
     "start": "node layout/generateMarkup.js && react-scripts start",
-    "build": "node layout/generateMarkup.js && react-scripts build && react-snapshot",
+    "build": "node layout/generateMarkup.js && react-scripts build && ./node_modules/react-snapshot/bin/react-snapshot.js",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx src",
     "clean": "eslint --fix --ext .js,.jsx,.ts,.tsx src",
     "deploy": "npm run deploy:static && npm run deploy:assets",
@@ -16,15 +16,15 @@
   },
   "dependencies": {
     "@types/node": "^13.9.1",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
+    "@types/react": "^17.0.19",
+    "@types/react-dom": "^17.0.9",
     "node-sass": "npm:sass@^1.39.0",
-    "react": "^17.0.1",
+    "react": "^17.0.2",
     "react-app-polyfill": "^0.2.2",
-    "react-dom": "^17.0.1",
+    "react-dom": "^17.0.2",
     "react-router-dom": "^5.0.0",
     "react-scripts": "^4.0.3",
-    "typescript": "^3.8.3"
+    "typescript": "^4.4.2"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.30.0",
