--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^17.0.2",
     "react-app-polyfill": "^3.0.0",
     "react-dom": "^17.0.2",
+    "react-markdown": "^8.0.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "^5.0.0",
     "typescript": "^4.6.2"
